--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -20,9 +20,8 @@
           </li>
           <!-- <li><a href="#">Link</a></li> -->
         <% else %>
-          <li>
-            <%= link_to "Sign In", new_session_path %>
-          </li>
+          <li><%= link_to "Sign In", new_session_path %></li>
+          <li><%= link_to "Sign Up", new_user_path %></li>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
