Build test for edit link.

--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -8,7 +8,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">URLockbox</a>
+      <%= link_to "URLockbox", links_path, class: "navbar-brand" %>
+      <!-- <a class="navbar-brand" href="#">URLockbox</a> -->
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
