Complete edit link.

--- a/app/views/links/edit.html.erb
+++ b/app/views/links/edit.html.erb
@@ -1,7 +1,7 @@
 <h3>Edit Link</h3>
 
-<!-- <%= form_for @link do |f| %>
+<%= form_for @link do |f| %>
   Title: <%= f.text_field :title %><br />
   URL: <%= f.text_field :url %><br />
   <%= f.submit "Submit" %>
-<% end %> -->
+<% end %>
