--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,17 +1,29 @@
 <h3>Submit New Link</h3>
 <%= form_for @link do |f| %>
-  Title: <%= f.text_field :title %><br />
-  URL: <%= f.text_field :url %><br />
-  <%= f.submit "Submit" %>
+  Title: <%= f.text_field :title, id: "link_title" %><br />
+  URL: <%= f.text_field :url, id: "link_url" %><br />
+  <%= f.submit "Submit", id: "submit_link" %>
 <% end %>
 
 <h3>Your Links</h3>
-<% @links.each do |link| %>
-  <ul>
-    <li>
-      Title: <%= link.title %><br />
-      URL: <%= link.url %><br />
-      <%= link_to "Edit", edit_link_path(link) %>
-    </li>
-  </ul>
-<% end %>
+<div id="links_list">
+  <% @links.each do |link| %>
+    <div class='link' data-id="<%= link.id %>" id="link-<%= link.id %>">
+      <p class='link-title' contenteditable=true><%= link.title %></p>
+      <p class='link-url' contenteditable=true><%= link.url %></p>
+
+      <p class="link_read">
+        <%= link.read %>
+      </p>
+      <p class="link_buttons">
+        <button class="upgrade-quality">+</button>
+        <button class="downgrade-quality">-</button>
+        <button class='delete-link'>Delete</button>
+      </p>
+    </div>
+
+      <!-- <p>Title: <%= link.title %><br /></p>
+      <p>URL: <%= link.url %><br /></p>
+      <p><%= link_to "Edit", edit_link_path(link) %></p> -->
+  <% end %>
+</div>
