Insert 'read' button.

--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -16,6 +16,7 @@
         <%= link.read %>
       </p>
       <p class="link_buttons">
+        <button class="mark-read">Read</button>
         <button class="upgrade-quality">+</button>
         <button class="downgrade-quality">-</button>
         <button class='delete-link'>Delete</button>
